// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when header text is passed as prop 1`] = `
<th
  className="font-bold py-4 px-2 leading-none border border-gray-400"
>
  EMBL
</th>
`;

exports[`renders when no text  is passed as prop 1`] = `
<th
  className="font-bold py-4 px-2 leading-none border border-gray-400"
/>
`;
